# MapMerger

./: .gitignore  CMakeLists.txt
include/camera/: camera.h
include/keyframe/: keyframe.h
include/map/: map.h
include/mappoint/: mappoint.h
include/merger/: map_merger.h
include/optimizer/: optimizer.h  sim3_solver.h  smooth_euler_optimizer.h  smooth_optimizer.h
include/plotter/: map_plotter.h  map_simulator_plotter.h  pose_plotter.h
include/realpoint/: realpoint.h
include/simulator/: map_simulator.h
src/: CMakeLists.txt
src/camera/: camera.cpp
src/keyframe/: keyframe.cpp
src/map/: map.cpp
src/mappoint/: mappoint.cpp
src/merger/: map_merger.cpp
src/optimizer/: optimizer.cpp  sim3_solver.cpp
src/realpoint/: realpoint.cpp
src/simulator/: map_simulator.cpp
test/: CMakeLists.txt  hello_test.cpp  map_simulator_test.cpp  map_test.cpp  marginalize_test.cpp  merger_test.cpp  optimizer_test.cpp  plotter_test.cpp  pose_graph_test.cpp  refined_pose_graph_test.cpp  yaw_pose_graph_test.cpp
